# telegram-local-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run_agent.ps1  run_agent.sh
agent/: __init__.py  bot.py  calendar_store.py  config.py  llm.py  memory.py  prompts.py
