[project]
name = "telegram-local-agent"
version = "0.1.0"
description = "Telegram assistant backed by a local LLM with SQLite memory and calendar."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-dotenv>=1.0.1",
  "python-telegram-bot>=21.0",
]

[project.scripts]
telegram-local-agent = "agent.bot:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
